k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esp32-iot-server-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - esp32iotserver.brennonloveless.com
      secretName: esp32-iot-server-crt
  rules:
    - host: esp32iotserver.brennonloveless.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esp32-iot-server-service
                port:
                  number: 3000
